# bpnet-lite

./: .gitignore  .readthedocs.yaml  CHANGELOG  LICENSE  README.md  bpnet  chrombpnet  example.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
bpnet_lite/: bpnet.py  io.py
bpnetlite/: __init__.py  attribute.py  attributions.py  bpnet.py  chrombpnet.py  hit_calling.py  io.py  logging.py  losses.py  marginalize.py  negatives.py  performance.py
docs/: conf.py  index.rst  requirements.txt  whats_new.rst
docs/_static/: custom.css
docs/api/: attribute.rst  bpnet.rst  io.rst  losses.rst  performance.rst
docs/tutorials/: Confirming_Chrom+BPNet_Predictions_Identical.ipynb  How-To-Design-Simple.ipynb  How-To-Evaluate-a-Model.ipynb  How-To-Save_Load_Convert.ipynb  How-To-Train-BPNet-Python.ipynb  How-To-Use-Pipeline.ipynb  Intro_What_Is_BPNet.ipynb  Intro_What_Is_ChromBPNet.ipynb  Intro_What_Is_ProCapNet.ipynb
example_jsons/: README.md  bpnet_attribute_example.json  bpnet_fit_example.json  bpnet_marginalize_example.json  bpnet_pipeline_example.json  bpnet_predict_example.json  bpnet_seqlets_example.json  chrombpnet_fit_example.json  chrombpnet_pipeline_example.json  example_train_bpnet.json  fit_example.json  interpret_example.json  marginalize_example.json  pipeline_example.json  predict_example.json
examples/: ENCSR000AKO.bed
notebooks/bpnet/: bpnet-fit.ipynb  bpnet_fit_example.json  bpnet_predict_example.json  example.final.torch  example.torch  y_counts.npz
notebooks/rbpnet/: example.final.torch  example.torch  rbpnet-fit.ipynb  y_counts.npz  (+2 more)
(+11 files in other folders)
