[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bpnet-lite"
version = "0.9.4"
description = "bpnet-lite is a minimal implementation of BPNet, a neural network aimed at interpreting regulatory activity of the genome."
authors = [
    {name = "Jacob Schreiber", email = "jmschreiber91@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.14.2",
    "scipy >= 1.0.0",
    "pandas >= 1.3.3",
    "torch >= 1.9.0",
    "h5py >= 3.7.0",
    "tqdm >= 4.64.1",
    "seaborn >= 0.11.2",
    "modisco-lite >= 2.0.0",
    "tangermeme >= 0.2.3",
    "bam2bw"
]

[project.urls]
Homepage = "https://github.com/jmschrei/bpnet-lite"
Repository = "https://github.com/jmschrei/bpnet-lite"

[project.scripts]
bpnet = "bpnetlite.cli.bpnet:main"
chrombpnet = "bpnetlite.cli.chrombpnet:main"

[tool.hatch.build]
packages = ["src/bpnetlite"]